--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import './Styles/utils';
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Didact Gothic', sans-serif;
+    color: $blackText;
+
+  
+   
 }
