working selection panel and images

--- a/css/App.css
+++ b/css/App.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");*{box-sizing:border-box;margin:0;padding:0;font-family:'Didact Gothic', sans-serif;color:#171a20}
+@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");*{box-sizing:border-box;margin:0;padding:0;font-family:'Didact Gothic', sans-serif;color:#171a20}.App{height:100vh;overflow:hidden}
