--- a/src/Components/PowerTrain/PowerTrain.scss
+++ b/src/Components/PowerTrain/PowerTrain.scss
@@ -1,8 +1,13 @@
 @import '../../Styles/btns';
+@import '../../Styles/utils';
 
 .Powertrain {
 
     width: 100%;
+
+    @extend %RightContent-Child;
+
+  
     
   
     
