--- a/src/Components/RightContent/RightContent.scss
+++ b/src/Components/RightContent/RightContent.scss
@@ -2,61 +2,92 @@
 
 
 .RightContent {
-    border: 1px solid black;
+
     flex: 1;
     margin-right: 3rem;
-    height: 100%;
     @include flexCenter(column);
+    justify-content: flex-start;
+    height: 90vh;
+    
+    
+    overflow-y: scroll;
 
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+   
+   
+ 
+    
 
-    .RightContent-Header {
-        padding-top: 4rem;
-        text-align: center;
+  
 
-        h1 {
-            color: $blackText;
-        }
+    .RightContent-Content {
+        
+     
 
-        p {
-            color: $greyText;
-            padding: 0.5rem 0;
-           
-        }
-    }
+        
+       
 
-
-
-    .RightContent-Highlights {
-        width: 100%;
-        @include flexCenter(row);
-        justify-content: space-evenly;
-        padding: 1rem 0;
-
-        .Highlights-Box {
-
-            .Highlights-Box-MainText {
-                @include flexCenter(row);
+        .RightContent-Header {
+            padding-top: 4rem;
+            text-align: center;
+    
+            h1 {
                 color: $blackText;
-                
-                h2 {
-                    font-size: 1.5rem;
-                }
-                p {
-                    font-size: 14px;
-                    font-weight: bold;
-                }
-
-                
-                
-
             }
-
+    
             p {
                 color: $greyText;
+                padding: 0.5rem 0;
+               
             }
-
+        }
+    
+    
+    
+        .RightContent-Highlights {
+            width: 100%;
+            @include flexCenter(row);
+            justify-content: space-evenly;
+            padding: 1rem 0;
+    
+            .Highlights-Box {
+    
+                .Highlights-Box-MainText {
+                    @include flexCenter(row);
+                    color: $blackText;
+                    
+                    h2 {
+                        font-size: 1.5rem;
+                    }
+                    p {
+                        font-size: 14px;
+                        font-weight: bold;
+                    }
+    
+                    
+                    
+    
+                }
+    
+                p {
+                    color: $greyText;
+                }
+    
+               
+            }
            
         }
-       
+
+
     }
+   
+
+
+    
+}
+
+
+.RightContent::-webkit-scrollbar {
+    display: none;
 }
