--- a/src/Styles/_btns.scss
+++ b/src/Styles/_btns.scss
@@ -23,6 +23,39 @@
    
 }
 
+// Radio Buttons with Imgs
+
+    // This goes on the label
+    %radioBtn-Img {
+        
+        height: 54px;
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+
+    // This goes on the img within the label
+
+    %radioBtn-ImgEl {
+        height: 40px;
+        width: 40px;
+        overflow: hidden;
+    }
+
+
+    // This goes on the actual Img within the label (for selected state)
+
+    %selectedRadioInput-Img {
+
+        box-shadow:  0 0 0 3px $btnSelelected;
+        padding: 3px;
+        box-sizing: content-box;
+        border-radius: 50%;
+        
+    }
+
+    
+
 
 %detailsBtn {
     background: $greybackground;
