--- a/src/Styles/_utils.scss
+++ b/src/Styles/_utils.scss
@@ -14,3 +14,10 @@ $btnSelelected: #3e6ae1;
     align-items: center;
     justify-content: center;
 }
+
+
+// Right Content Child Componeent Styling 
+
+%RightContent-Child {
+    height: 40vh;
+}
