--- a/src/Components/MainContainer/MainContainer.scss
+++ b/src/Components/MainContainer/MainContainer.scss
@@ -3,7 +3,16 @@
 
 .MainContainer {
     width: 100%;
+    height: 100%;
     @include flexCenter(row);
+    align-items: flex-start;
+    overflow: hidden;
+  
+
+   
+   
+ 
     
     
 }
+  
