right panel fully functional, added modal funcitonality

--- a/src/Components/Interior/Interior.scss
+++ b/src/Components/Interior/Interior.scss
@@ -45,5 +45,14 @@
         }
 
     }
+
+
+    .Interior-Details-Container {
+        margin-top: 2rem;
+        .Feature-Details-Btn {
+            @extend %detailsBtn;
+           
+        }
+    }
 }
 
