--- a/src/Components/RightContent/RightContent.scss
+++ b/src/Components/RightContent/RightContent.scss
@@ -22,6 +22,7 @@
   
 
     .RightContent-Content {
+        width: 100%;
         
      
 
@@ -30,10 +31,12 @@
 
         .RightContent-Header {
             padding-top: 4rem;
+            padding-bottom: 2rem;
             text-align: center;
     
             h1 {
                 color: $blackText;
+                font-size: 2.5rem;
             }
     
             p {
