--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -18,27 +18,105 @@
         height: 60vh;
         width: 100%;
         margin-bottom: 5rem;
+        position: relative;
+
+        .Modal-Slider-Btn {
+            position: absolute;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            z-index: 1000;
+            background-color: red;
+            height: 50px;
+            width: 50px;
+            @include flexCenter(row);
+            border-radius: 50%;
+            cursor: pointer;
+            background-color: rgba($greybackground, 0.2);
+            
+             
+            i {
+                color: white;
+                transform: scale(1.5);
+            }
+            
+        }
+
+        .Modal-Slider-Btn.Left {
+            left: 20%;
+        }
+
+        .Modal-Slider-Btn.Right {
+            right: 20%;
+        }
+   
         
 
         .Modal-Slide {
             height: 100%;
-            width: 770px;
+            width: 850px;
             @include flexCenter(row);
             background-color: white;
             border-radius: 15px;
             overflow: hidden;
             margin: 0 auto;
+            position: relative;
             
 
 
             .Modal-Slide-Content-Left {
-              
-
-                height: 100%;
+               height: 100%;
+                
+                
                 img {
                     height: 100%;
                     
                 }
+            }
+
+            .Modal-Slide-Content-Right {
+                height: 80%;
+
+                .Modal-Slide-Content-Right-Text {
+                    width: 90%;
+                    margin: 0 auto;
+
+                    h1 {
+                        font-size: 24px;
+                        padding-bottom: 0.5rem;
+                    }
+
+                    p {
+                        color: $greyText;
+                    }
+                }
+                
+            }
+
+           
+
+
+
+            .ModalClose-Btn {
+                position: absolute;
+                top: 0;
+                right: 0;
+                margin-top: 1rem;
+                margin-right: 1rem;
+                font-size: 2rem;
+                border-radius: 50%;
+                width: 50px;
+                height: 50px;
+                background: none;
+                border: none;
+                cursor: pointer;
+                transition: background 0.4s ewa;
+            }
+            .ModalClose-Btn:hover {
+                background-color: $greybackground ;
+            }
+
+            .ModalClose-Btn:focus {
+                outline: none;
             }
 
         }
