--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -20,6 +20,7 @@
         text-transform: uppercase;
         color: $blackText;
         font-size: 1.2rem;
+        letter-spacing: 0.6rem;
     }
 
     .rightNav {
