--- a/src/Components/SelfDriving/SelfDriving.scss
+++ b/src/Components/SelfDriving/SelfDriving.scss
@@ -51,6 +51,12 @@
             
         }
 
+        .SelfDriving-Btn-Remove {
+            @extend %detailsBtn;
+            width: 150px;
+
+        }
+
         .Feature-Details-Btn {
             @extend %detailsBtn;
             
