--- a/src/Components/ModalSlide/ModalSlide.scss
+++ b/src/Components/ModalSlide/ModalSlide.scss
@@ -3,18 +3,20 @@
 
 
 .Modal-Slide {
-    height: 550px;
+    // height: 550px;
     
-    width: 850px;
-    min-width: 850px;
-    @include flexCenter(row);
-    background-color: white;
-    border-radius: 15px;
-    overflow: hidden;
-    // margin: 0 auto;
-    margin: 0 2rem;
-    position: relative;
-    // transform: translateX(50%);
+    // width: 850px;
+    // min-width: 850px;
+    // @include flexCenter(row);
+    // background-color: white;
+    // border-radius: 15px;
+    // overflow: hidden;
+ 
+    // margin: 0 2rem;
+    // position: relative;
+ 
+
+    @extend %modal;
     
 
 
@@ -52,28 +54,9 @@
 
 
     .ModalClose-Btn {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin-top: 1rem;
-        margin-right: 1rem;
-        font-size: 2rem;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        background: none;
-        border: none;
-        cursor: pointer;
-        transition: background 0.4s ease;
+        @extend %modalClose-Btn
     }
-    .ModalClose-Btn:hover {
-        background-color: $greybackground ;
-    }
-
-    .ModalClose-Btn:focus {
-        outline: none;
-    }
-
+   
 }
 
 
