included media query variables in utils

--- a/src/Styles/_utils.scss
+++ b/src/Styles/_utils.scss
@@ -5,6 +5,15 @@ $greyText: #5c5e62;
 $greybackground: #f4f4f4;
 $btnSelelected: #3e6ae1;
 
+// Media Query Variables
+
+$mobile: 300px;
+$mobileLarge: 425px;
+$tablet: 900px;
+$laptop: 1025px;
+$mediumLaptop: 1630px;
+
+
 
 // Mixins
 
