first pass at responsive functionality

--- a/src/Components/ImgSlider/ImgSlider.scss
+++ b/src/Components/ImgSlider/ImgSlider.scss
@@ -47,3 +47,24 @@
         
    
 }
+
+
+
+@media (max-width: $laptop) {
+
+    .ImgSlider {
+        .ImgSlider-Container {
+           
+    
+            .Slide {
+               
+            
+              
+            
+                
+                
+            }
+        }
+    }
+  
+}
