--- a/css/LeftContent.css
+++ b/css/LeftContent.css
@@ -1,1 +1,1 @@
-.LeftContent{flex:4.8;height:100%}
+.LeftContent{flex:5;height:95%;position:relative}@media (max-width: 1200px){.LeftContent{height:65%}}
