--- a/css/MainContainer.css
+++ b/css/MainContainer.css
@@ -1,1 +1,1 @@
-.MainContainer{width:100%;height:100%;display:flex;flex-direction:row;align-items:center;justify-content:center;align-items:flex-start;overflow:hidden;position:relative}
+.MainContainer{width:100%;height:100%;display:flex;flex-direction:row;align-items:center;justify-content:center;align-items:flex-start;overflow:hidden;position:relative}@media (max-width: 1200px){.MainContainer{flex-direction:column}}
