--- a/src/Components/LeftContent/LeftContent.scss
+++ b/src/Components/LeftContent/LeftContent.scss
@@ -3,10 +3,23 @@
 
 .LeftContent {
 
-    flex: 4.8;
-    height: 100%;
+    flex: 5;
+    height: 95%;
+    position: relative;
+ 
+  
 
 
  
   
+}
+
+
+@media (max-width: $laptop) {
+    .LeftContent {
+        height: 65%;
+        // max-height: 65%;
+        // overflow: hidden;
+        
+    }
 }
