--- a/src/Components/ModalSlideOrder/ModalSlideOrder.scss
+++ b/src/Components/ModalSlideOrder/ModalSlideOrder.scss
@@ -61,6 +61,7 @@
 
                 a {
                     color: white;
+                    text-decoration: none;
                 }
             }
 
@@ -85,6 +86,65 @@
         @extend %modalClose-Btn
     }
    
+
+}
+
+
+@media (max-width: $tablet) {
+    .Modal-SlideOrder {
+        justify-content: center;
+
+        .Modal-SLideOrder-Title {
+          
+            font-size: 1.7rem;
+        }
+    
+   
+        
+    
+    
+        .Modal-SlideOrder-Content-Left {
+           height: 40%;
+      
+          
+
+           img {
+           
+            transform: scale(1.3);
+            }
+
+        }
+
+        .Modal-SlideOrder-Content-Right {
+
+
+        
+        .Modal-SlideOrder-Content-Right-Text {
+         
+
+        
+
+            .Order-Btn {
+              
+              
+                width: 250px;
+               
+                height: 50px;
+                font-size: 16px;
+
+                a {
+                    color: white;
+                   
+                }
+            }
+        }
+
+    }
+       
+
+
+    }
+
 
 }
 
