fixed modal scroll issue in tablet width

--- a/src/Components/ModalSlide/ModalSlide.scss
+++ b/src/Components/ModalSlide/ModalSlide.scss
@@ -16,6 +16,8 @@
 
     .Modal-Slide-Content-Right {
         height: 80%;
+        min-width: 155px;
+        overflow-y: scroll;
 
         .Modal-Slide-Content-Right-Text {
             width: 90%;
